Yum_install_throwing_error_multiple_python_versions
Issues: After installing Python 3.7.1 along with 2.7.5 I was getting error while running "yum install/search <package>"

Error message:
yum search package
  File "/usr/bin/yum", line 30
    except KeyboardInterrupt, e:
                            ^
SyntaxError: invalid syntax

Resolution: 

If you set python3 globally on your system change the yumshebang to python2:
# vi /usr/bin/yum
FROM:
#!/usr/bin/python
TO:
#!/usr/bin/python2.7


Error message:
Downloading packages:
  File "/usr/libexec/urlgrabber-ext-down", line 28
    except OSError, e:
                  ^
SyntaxError: invalid syntax
Exiting on user cancel

Resolution: 
The issue is also related to Python 3 set as a default global version. To fix this error update /usr/libexec/urlgrabber-ext-down script:
# vi /usr/libexec/urlgrabber-ext-down
FROM:
#!/usr/bin/python
TO:
#!/usr/bin/python2.7

NOTE: In my case I create symlinks for Python version 2.7 and 3.7 so I had to put #!/usr/bin/python2 instead of #!/usr/bin/python2.7
[root@bosdevxininf01 ~]# ls -l /usr/bin/python*
lrwxrwxrwx  1 root root   24 Jan  5 01:15 /usr/bin/python -> /usr/local/bin/python3.7
lrwxrwxrwx. 1 root root    9 Dec  5 13:19 /usr/bin/python2 -> python2.7
-rwxr-xr-x. 1 root root 7216 Oct 30 19:46 /usr/bin/python2.7
